--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,7 +32,7 @@ repos:
     hooks:
       - id: pylint
         name: Run Pylint
-        entry: pipenv run pylint
+        entry: pylint
         language: system
         types: [python]
         args:
