--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ fuzzywuzzy = "*"
 python-levenshtein = "*"
 py-cord = {git = "https://github.com/Pycord-Development/pycord"}
 requests = "*"
+deepdiff = "*"
 
 [dev-packages]
 black = "*"
