Switch from Pycord to disnake

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,11 @@ arrow = "^1.0.1"
 beanie = "^1.8.12"
 deepdiff = "^5.7.0"
 discord-timestamps = "^1.0.1"
+disnake = "^2.3.2"
 dnspython = "^2.2.0"
 fuzzywuzzy = "^0.18.0"
 loguru = "^0.6.0"
 motor = "^2.5.1"
-py-cord = {git = "https://github.com/Pycord-Development/pycord"}
 pydantic = "^1.9.0"
 python = "^3.10"
 python-Levenshtein = "^0.12.2"
